--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,20 @@
     <string name="already_have_an_account_log_in">Already have an account? Log In</string>
     <string name="email">Email</string>
     <string name="enter_as_guest">Enter as Guest</string>
+    <string name="google_button_sign_in">Google Button Sign in</string>
+    <string name="facebook_button_sign_in">Facebook Button Sign in</string>
+    <string name="forgot_password_click_to_reset">Forgot Password? Click to reset</string>
+    <string name="facebook_app_id">429311136106230</string>
+    <string name="fb_login_protocol_scheme">fb429311136106230</string>
+    <string name="facebook_client_token">2f13043cae41ddd11e732e3693c0ea4d</string>
+    <string name="home">Home</string>
+    <string name="payments">Payments</string>
+    <string name="logout">Logout</string>
+    <string name="profile">Profile</string>
+    <string name="contact_us">Contact Us</string>
+    <string name="share">Share</string>
+    <string name="about">About</string>
+    <string name="favorites">Favorites</string>
+    <string name="reservations">Reservations</string>
+
 </resources>
